feat(home page): add page jump

--- a/src/components/Carousel/carousel.less
+++ b/src/components/Carousel/carousel.less
@@ -1,5 +1,11 @@
-.slick-dots {
+.slick-slide {
   pointer-events: none;
+}
+.slick-slide.slick-active {
+  pointer-events: all;
+}
+.slick-dots {
+  height: min-content;
   top: 1.3rem;
 }
 .slick-dots li {
